--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@validityhq/MonolithStarter",
+  "name": "@validityhq/CsvDuplicateReader",
   "version": "0.0.1",
   "description": "A template of the validity starter app!",
   "author": "Validity",
@@ -7,7 +7,7 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git@github.com:validityhq/MonolithStarter.git"
+    "url": "https://github.com/GunjanHardasmalani/Validity-TakeHomeTest.git"
   },
   "dependencies": {
     "shelljs": "^0.8.3"
@@ -20,7 +20,7 @@
     "build": "node buildscripts/build-server.js",
     "build-css": "node-sass-chokidar --include-path ./node_modules ./src/scss -o ./src/scss",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./node_modules ./src/scss -o ./src/scss --watch --recursive",
-    "start": "cd monolithstarter-svc && ./mvnw",
+    "start": "cd csvDuplicateReader-svc && ./mvnw",
     "cypress:open": "cypress open",
     "cy:run-ci": "cypress run --config video=false,numTestsKeptInMemory=0,restartBrowserBetweenSpecFiles=true",
     "start-and-test-ci": "start-server-and-test start http://localhost:8080 cy:run-ci"
