--- a/csvDuplicateReader-static/package.json
+++ b/csvDuplicateReader-static/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "4.3.1",
     "lodash": "4.17.11",
     "moment": "2.24.0",
+    "node-sass": "^4.14.1",
     "react": "16.8.5",
     "react-dom": "16.8.5",
     "react-loadable": "5.5.0",
